# transcriber-tool

./: .env.example  .gitignore  Cargo.toml  flake.nix  test.sh
.github/workflows/: flakehub-publish-tagged.yml
src/: main.rs
